pod-security/restricted/require-run-as-nonroot/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require-run-as-nonroot.yaml
assert:
- policy-assert.yaml
