pod-security/restricted/require-run-as-nonroot/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-nonroot
spec:
  validationFailureAction: Enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
