pod-security/restricted/require-run-as-nonroot/e2e/remediation-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-require-run-as-nonroot
spec:
  validationFailureAction: Audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
