pod-security/restricted/require-run-as-nonroot/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-nonroot-policy
spec:
  steps:
  - name: test-require-run-as-nonroot
    try:
    - apply:
        file: ../require-run-as-nonroot.yaml
    - assert:
        file: policy-assert.yaml
    - apply:
        file: ../remediate-require-run-as-nonroot.yaml
    - assert:
        file: remediation-policy-assert.yaml
    - apply:
        file: ../deployment.yaml
    - sleep:
        duration: 30s
    - assert:
        resource:
          apiVersion: wgpolicyk8s.io/v1alpha2
          kind: PolicyReport
          metadata:
            name: cpol-require-run-as-nonroot
          summary:
            error: 0
            fail: 0
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: remediate-require-run-as-nonroot
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../require-run-as-nonroot.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
